--- a/force-app/main/default/lwc/stoComponent/stoComponent.html
+++ b/force-app/main/default/lwc/stoComponent/stoComponent.html
@@ -1,7 +1,9 @@
 <template>
     <div class="decorator-wrapper">
         <div class="header">
-            <h1 class="typo-sidetittel">Skriv til oss</h1>
+            <!--  <c-community-picklist fielddescriptor="Språk/Language"></c-community-picklist>-->
+            <div class="headlineholder"></div>
+            <h2 class="typo-sidetittel">{label.headline}</h2>
             <!-- Replace with Label-->
         </div>
         <!-- Start of write new message-->
@@ -9,7 +11,7 @@
             <div class="panel text-center">
                 <img src={fillform} alt="Fyll inn" class="ficon" />
                 <h2 class="typo-undertittel blokk-s">{selectedTheme.Label}</h2>
-                <p class="typo-normal typo-normal blokk-xs">{label.welcomlabel}</p>
+                <p class="typo-normal typo-normal blokk-xs">{label.textareadescription}</p>
                 <div class="inputarea">
                     <lightning-textarea
                         name="input1"
@@ -19,7 +21,7 @@
                         maxlength="32000"
                     ></lightning-textarea>
                     <template if:true={showerror}>
-                        <p class="typo-feilmelding">Tekstfeltet er tomt</p>
+                        <p class="typo-feilmelding">{errormessage}</p>
                     </template>
                     <div class="skjemaelement checkbox">
                         <input
@@ -32,11 +34,10 @@
                             onchange={togglechecked}
                             aria-describedby="checkbox-feilmelding"
                             value="false"
-                        /><label class="skjemaelement__label" for="godkjennVilkaar"
-                            >Jeg godtar vilkårene for bruk av tjenesten.</label
-                        ><a href="#" class="lenke vilkar-link">Vis vilkår</a>
+                        /><label class="skjemaelement__label" for="godkjennVilkaar">{label.acceptermtext}</label
+                        ><a href="#" class="lenke vilkar-link">{label.showtermstext}</a>
                         <template if:true={showerror}>
-                            <p class="typo-feilmelding">Du må godta vilkårene for å sende beskjeden</p>
+                            <p class="typo-feilmelding">{label.accepterrmessage}</p>
                         </template>
                     </div>
                 </div>
@@ -50,7 +51,12 @@
         <!-- Start list of all items-->
         <template if:false={shownewmessage}>
             <template for:each={themes} for:item="theme">
-                <c-sto-Theme-Item theme={theme} onthemeselected={handleselectedtheme} key={theme.Id}></c-sto-Theme-Item>
+                <c-sto-Theme-Item
+                    theme={theme}
+                    onthemeselected={handleselectedtheme}
+                    key={theme.Id}
+                    tabindex="0"
+                ></c-sto-Theme-Item>
             </template>
         </template>
         <!-- End list of all items-->
