--- a/force-app/main/default/lwc/stoThemeItem/stoThemeItem.html
+++ b/force-app/main/default/lwc/stoThemeItem/stoThemeItem.html
@@ -6,13 +6,8 @@
         key={theme.Id}
         onclick={handleclick}
     >
-        <div
-            data-portal-component-type="part"
-            data-portal-component="/main/1/dynamic-1/0"
-            class="region region__dynamic-link-panel"
-            data-th-remove="tag"
-        >
-            <a class="lenkepanel link-panel vertical lenkepanel--border">
+        <div>
+            <a class="lenkepanel link-panel vertical lenkepanel--border" role="button">
                 <div class="link-panel__innhold">
                     <div class="link-panel__header">
                         <h2 class="typo-undertittel link-panel__title">{theme.Label}</h2>
