--- a/force-app/main/default/lwc/stoComponent/stoComponent.html
+++ b/force-app/main/default/lwc/stoComponent/stoComponent.html
@@ -33,13 +33,58 @@
                             name="godkjennVilkaar"
                             onchange={togglechecked}
                             aria-describedby="checkbox-feilmelding"
-                            value="false"
+                            checked={acceptedTerms}
                         /><label class="skjemaelement__label" for="godkjennVilkaar">{label.acceptermtext}</label
-                        ><a href="#" class="lenke vilkar-link">{label.showtermstext}</a>
+                        ><a onclick={showTerms} class="slds-var-p-left_small lenke vilkar-link"
+                            >{label.showtermstext}</a
+                        >
                         <template if:true={showerror}>
                             <p class="typo-feilmelding">{label.accepterrmessage}</p>
                         </template>
                     </div>
+                    <c-community-modal>
+                        <h1
+                            slot="modalHeader"
+                            tabindex="0"
+                            class="slds-var-m-top_x-large typo-sidetittel text-center blokk-l"
+                        >
+                            Vilkårene for å bruke denne tjenesten
+                        </h1>
+                        <div slot="modalContent">
+                            <section>
+                                <form class="betingelser-panel panel side-innhold">
+                                    <div class="blokk-m slds-var-m-top_medium" style="text-align: left">
+                                        <lightning-formatted-rich-text
+                                            value={label.SERVICE_TERMS}
+                                        ></lightning-formatted-rich-text>
+                                    </div>
+                                </form>
+                            </section>
+                        </div>
+                        <div slot="modalFooter">
+                            <div class="slds-var-p-bottom_x-large svar-godta text-center blokk-m">
+                                <button
+                                    class="knapp knapp--hoved"
+                                    aria-controls="betingelser"
+                                    onclick={termsAccepted}
+                                    type="submit"
+                                >
+                                    {label.ACCEPT_TERMS_BUTTON}
+                                </button>
+                            </div>
+                            <div class="text-center">
+                                <button
+                                    class="knapp knapp--flat"
+                                    type="submit"
+                                    aria-controls="betingelser"
+                                    role="button"
+                                    onclick={termsDenied}
+                                >
+                                    {label.DENY_TERMS_BUTTON}
+                                </button>
+                            </div>
+                        </div>
+                    </c-community-modal>
                 </div>
                 <button class="knapp knapp--hoved" type="submit" aria-disabled="false" onclick={submitrequest}>
                     Send
