--- a/force-app/main/default/lwc/stoThemeItem/stoThemeItem.html
+++ b/force-app/main/default/lwc/stoThemeItem/stoThemeItem.html
@@ -12,7 +12,7 @@
                     <div class="link-panel__header">
                         <h2 class="typo-undertittel link-panel__title">{theme.Label}</h2>
                     </div>
-                    <div class="link-panel__ingress">{theme.STODescription__c}</div>
+                    <div class="link-panel__ingress">{theme.STO_Description__c}</div>
                 </div>
             </a>
         </div>
