--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -1,12 +1,5 @@
 <template>
     <c-crm-messaging-message-component record-id={recordId} single-thread={singleThread}>
-        <lightning-button-icon-stateful
-            if:true={isCase}
-            slot="toolbar"
-            icon-name="utility:change_owner"
-            alternative-text="Overfør"
-            onclick={startTransferFlow}
-        >
-        </lightning-button-icon-stateful>
+        <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
     </c-crm-messaging-message-component>
 </template>
