--- a/force-app/main/default/lwc/communityBreadCrumb/communityBreadCrumb.html
+++ b/force-app/main/default/lwc/communityBreadCrumb/communityBreadCrumb.html
@@ -24,5 +24,47 @@
                 <span class="brodsmulesti__transform">{leafnode}</span>
             </template>
         </nav>
+
+        <nav class="brodsmulesti" aria-label="Brødsmulesti" itemprop="breadcrumb">
+            <ol>
+               <li class="typo-normal"><a href="https://www.nav.no" class="lenke brodsmulesti__home"><img src={homelogo} alt="" class="brodsmulesti__icon"><span>nav.no</span><span class="nav-frontend-chevron chevronboks chevron--hoyre"></span></a></li>
+               <li class="typo-normal"><a href="https://www.nav.no" class="lenke"><span>Privatperson</span><span class="nav-frontend-chevron chevronboks chevron--hoyre"></span></a></li>
+               <li class="typo-normal" aria-current="page"><span class="brodsmulesti__transform">Arbeidssøker eller permittert</span></li>
+            </ol>
+         </nav>
+
+         <div class="decorator-utils-container">
+            <div class="decorator-utils-content">
+                <nav class="brodsmulesti" aria-label="Brødsmulesti" itemprop="breadcrumb">
+                    <ol>
+                        <li class="typo-normal">
+                            <a href="https://www.nav.no" class="lenke brodsmulesti__home"
+                                ><img src={homelogo} alt="" class="brodsmulesti__icon" /> <span>nav.no</span
+                                ><i class="nav-frontend-chevron chevronboks chevron--hoyre"></i
+                            ></a>
+                        </li>
+                        <li class="typo-normal">
+                            <a href="https://www.nav.no/no/bedrift" class="lenke"
+                                ><span>Arbeidsgiver</span><i class="nav-frontend-chevron chevronboks chevron--hoyre"></i
+                            ></a>
+                        </li>
+                        <li class="typo-normal" aria-current="false">
+                            <a href="https://arbeidsgiver.nav.no/kursoversikt/" class="lenke brodsmulesti__transform"
+                                ><span>Kurskalender</span><i class="nav-frontend-chevron chevronboks chevron--hoyre"></i
+                            ></a>
+                        </li>
+                        <li class="typo-normal" aria-current="false">
+                            <a href={url} class="lenke brodsmulesti__transform"
+                                ><span>Om kurset</span><i class="nav-frontend-chevron chevronboks chevron--hoyre"></i
+                            ></a>
+                        </li>
+                        <li class="typo-normal" aria-current="page">
+                            <span class="brodsmulesti__transform">Påmeldingsskjema</span>
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+
     </div>
 </template>
