--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -9,13 +9,13 @@
                     <lightning-layout-item size="11">
                         <p class="typo-normal blokk-xxxs">
                             <lightning-formatted-date-time
-                                value={thread.CRM_Latest_Message_Datetime__c}
+                                value={thread.latestMessageDate}
                                 month="2-digit"
                                 day="2-digit"
                                 year="numeric"
                             ></lightning-formatted-date-time>
                         </p>
-                        <h3 class="typo-undertittel">{thread.Name}<span class="vekk"></span></h3>
+                        <h3 class="typo-undertittel">{thread.name}<span class="vekk"></span></h3>
                         <p class="typo-normal tema-avsnitt slds-truncate">{latestText}</p>
                     </lightning-layout-item>
                 </lightning-layout>
