Added new Logo to Breadcrumb

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -8,7 +8,7 @@
                <img src={logopath} class="logo" />
             <h2 class="typo-undertittel blokk-s">{selectedTheme}</h2>
             <div class=descholder> 
-                <p class="typo-normal typo-normal blokk-xs description">{label.textareadescription}</p>
+                <p class="typo-normal typo-normal blokk-xs description">{label.welcomlabel}</p>
             </div>
         <div class="inputarea">
             <template if:false={showspinner}>
