--- a/force-app/main/default/lwc/communityBreadCrumb/communityBreadCrumb.html
+++ b/force-app/main/default/lwc/communityBreadCrumb/communityBreadCrumb.html
@@ -5,28 +5,28 @@
                 <nav class="brodsmulesti" aria-label="Brødsmulesti" itemprop="breadcrumb">
                     <a href="https://www.nav.no" class="lenke brodsmulesti__home typo-normal"
                         ><img src={homelogo} alt="" class="homeicon" /><span>nav.no</span
-                        ><span class="nav-frontend-chevron chevronboks chevron--hoyre"></span
-                    ></a>
+                        ></a>
+                        <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
                     <template if:true={firstLevel}>
                         <a href={firstLevelLink} class="lenke typo-normal"
-                            ><span>{firstLevel}</span><span class="nav-frontend-chevron chevronboks chevron--hoyre"></span
-                        ></a>
+                            ><span>{firstLevel}</span></a>
+                            <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
                     </template>
                     <template if:true={secondLevel}>
                         <a href={secondLevelLink} class="lenke brodsmulesti__transfor typo-normal"
-                            ><span>{secondLevel}</span><span class="nav-frontend-chevron chevronboks chevron--hoyre"></span
-                        ></a>
+                            ><span>{secondLevel}</span></a>
+                            <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
                     </template>
                     <template if:true={thirdLevel}>
                         <a href={thirdLevelLink} class="lenke brodsmulesti__transform typo-normal"
-                            ><span>{thirdLevel}</span><span class="nav-frontend-chevron chevronboks chevron--hoyre"></span
-                        ></a>
+                            ><span>{thirdLevel}</span></a>
+                        <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
                     </template>
                     <template if:true={leafnode}>
                         <span class="brodsmulesti__transform typo-normal">{leafnode}</span>
                     </template>
                 </nav>
-        </div>
+            </div>
         </div>
     </div>
 </template>
