--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -3,7 +3,7 @@
         <div class="header">
             <h1 class="typo-sidetittel">{title}</h1>
         </div>
-        <div>
+        <div class="header">
             <c-nav-Button url='https://www.nav.no' title='Skriv ny melding' ></c-nav-Button>
         </div>
         <!-- TODO: FIX visibility -->
