Moves transfer to complete flow and renames header

--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -1,5 +1,5 @@
 <template>
-    <c-crm-messaging-message-component record-id={recordId} single-thread={singleThread}>
+    <c-crm-messaging-message-component record-id={recordId} single-thread={singleThread} card-title={cardTitle}>
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
     </c-crm-messaging-message-component>
 </template>
