--- a/force-app/main/default/lwc/crmStoMessagingToolbar/crmStoMessagingToolbar.html
+++ b/force-app/main/default/lwc/crmStoMessagingToolbar/crmStoMessagingToolbar.html
@@ -1,12 +1,12 @@
 <template>
-    <lightning-button-icon-stateful
+    <!-- <lightning-button-icon-stateful
         if:true={isCase}
         slot="toolbar"
         icon-name="utility:change_owner"
         alternative-text="Overfør"
         onclick={startTransferFlow}
     >
-    </lightning-button-icon-stateful>
+    </lightning-button-icon-stateful> -->
     <lightning-button-icon-stateful
         slot="toolbar"
         icon-name="utility:archive"
