green open color

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -14,7 +14,7 @@
                                 month="2-digit"
                                 day="2-digit"
                                 year="numeric"
-                            ></lightning-formatted-date-time> - {thread.status}
+                            ></lightning-formatted-date-time> - <span class={statuscolor}> {thread.status} </span>
                         </p>
                         <h3 class="typo-undertittel lenkepanel__heading ">{thread.name}<span class="vekk"></span></h3>
                         <p class="typo-normal tema-avsnitt slds-truncate">{latestText}</p>
