Added support for STO news object

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -12,6 +12,9 @@
             </div>
         <div class="inputarea">
             <template if:false={showspinner}>
+                <template for:each={newslist} for:item="news">
+                    <c-community-expandable-panel header={news.STO_Header__c} body={news.STO_Body__c} key={news.id}></c-community-expandable-panel>
+                </template>
                 <lightning-textarea
                     name="input1"
                     onchange={inputChange}
