--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,11 +1,10 @@
 <template>
     <div>
-        <a class={className} href={linkUrl} key={thread.Id}>
-            <!--<a class="lenkepanel dialog flere-meldinger .slds-size_1-of-1" href={linkUrl} key={thread.Id}>-->
-                <span class="typo-undertittel ">
+        <a class={className} href={linkUrl} key={thread.Id} id="a">
+            <span class="typo-undertittel ">
                 <lightning-layout vertical-align="center">
                     <lightning-layout-item size="1" padding="around-medium">
-                        <img src={dialog} alt="message" />
+                        <img class="iconcolor" src={dialog} alt="message" id="b"/>
                     </lightning-layout-item>
                     <lightning-layout-item size="10">
                         <p class="typo-normal blokk-xxxs">
