--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -4,7 +4,7 @@
             <span class="typo-undertittel ">
                 <lightning-layout vertical-align="center">
                     <lightning-layout-item size="1" padding="around-medium">
-                        <img class="iconcolor" src={dialog} alt="message" id="b"/>
+                        <img class="iconcolor" src={dialog} alt={unreadmessage} id="b"/>
                     </lightning-layout-item>
                     <lightning-layout-item size="10">
                         <p class="typo-normal blokk-xxxs">
