--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -6,8 +6,12 @@
         <div class="header">
             <c-nav-Button url='https://www.nav.no' title='Skriv ny melding' ></c-nav-Button>
         </div>
-        <!-- TODO: FIX visibility -->
-        <template if:true={wirerecentthreads}>
+        <div class="body">
+            <p class="navds-body-long navds-typo--spacing"><strong>
+                For meldinger om dokumenter og/eller informasjonsbrev se <a href="https://www.mininnboks.nav.no" class="lenke lenke-inline" target="_blank">brev og vedtak</a>
+            </strong></p>
+        </div>
+        <template if:true={showrecentthreads}>
             <div class="subheader">
                 <h2 class="typo-undertittel">Siste meldinger</h2>
             </div>
@@ -15,8 +19,7 @@
                 <c-sto-Message-Inbox-Item thread={thread} key={thread.recordId}></c-sto-Message-Inbox-Item>
             </template>
         </template>
-        <!-- TODO: FIX visibility -->
-        <template if:true={wirethreads}>
+        <template if:true={showthreads}>
             <div class="subheader">
                 <h2 class="typo-undertittel">Tidligere meldinger</h2>
             </div>
