--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -1,102 +1,150 @@
 <template>
     <div class="decorator-wrapper">
         <div class="header">
-            <h2 class="typo-sidetittel">Skriv til oss</h2>
+            <h1 class="typo-sidetittel">Skriv til oss</h1>
         </div>
         <div class="panel text-center">
             <template if:true={validparameter}>
-               <img src={logopath} class="logo" />
-            <h2 class="typo-undertittel blokk-s">{selectedTheme}</h2>
-            <div class=descholder> 
-                <p class="typo-normal typo-normal blokk-xs description">{label.welcomlabel}</p>
-            </div>
-        <div class="inputarea">
-            <template if:false={showspinner}>
-                <template for:each={newslist} for:item="news">
-                    <c-community-expandable-panel header={news.STO_Header__c} body={news.STO_Body__c} key={news.id}></c-community-expandable-panel>
-                </template>
-                <lightning-textarea
-                    name="input1"
-                    onchange={inputChange}
-                    variant="label-hidden"
-                    label="Skriv din melding her"
-                    maxlength="32000"
-                ></lightning-textarea>
-                    <template if:true={showErrorNoMessage}>
-                        <p class="typo-feilmelding">{label.EMPTY_TEXT_FIELD_ERROR}</p>
-                    </template>
-                    <div class="skjemaelement checkbox">
-                        <input
-                            type="checkbox"
-                            class="skjemaelement__input checkboks"
-                            data-id="checkbox"
-                            id="godkjennVilkaar"
-                            aria-invalid="false"
-                            name="godkjennVilkaar"
-                            onchange={togglechecked}
-                            aria-describedby="checkbox-feilmelding"
-                            checked={acceptedTerms}
-                        /><label class="skjemaelement__label" for="godkjennVilkaar">{label.acceptermtext}</label
-                        ><a onclick={showTerms} class="slds-var-p-left_small lenke vilkar-link"
-                            >{label.showtermstext}</a
-                        >
-                        <template if:true={showError}>
-                            <p class="typo-feilmelding">{label.ACCEPT_TERMS_ERROR}</p>
+                <img aria-hidden="true" src={logopath} class="logo" />
+                <h2 class="typo-undertittel blokk-s">{selectedTheme}</h2>
+                <div class="descholder">
+                    <p class="typo-normal typo-normal blokk-xs description">{label.welcomlabel}</p>
+                </div>
+                <div class="inputarea">
+                    <template if:false={showspinner}>
+                        <template for:each={newslist} for:item="news">
+                            <c-community-expandable-panel
+                                header={news.STO_Header__c}
+                                body={news.STO_Body__c}
+                                key={news.id}
+                            ></c-community-expandable-panel>
                         </template>
-                    </div>
-                    <c-community-modal>
-                        <h1
-                            slot="modalHeader"
-                            tabindex="0"
-                            class="slds-var-m-top_x-large typo-sidetittel text-center blokk-l"
+                        <lightning-textarea
+                            name="input1"
+                            onchange={inputChange}
+                            variant="label-hidden"
+                            label="Skriv din melding her"
+                            maxlength="32000"
+                        ></lightning-textarea>
+                        <template if:true={showErrorNoMessage}>
+                            <p class="typo-feilmelding">{label.EMPTY_TEXT_FIELD_ERROR}</p>
+                        </template>
+                        <div class="skjemaelement checkbox">
+                            <input
+                                type="checkbox"
+                                class="skjemaelement__input checkboks"
+                                data-id="checkbox"
+                                id="godkjennVilkaar"
+                                aria-invalid="false"
+                                name="godkjennVilkaar"
+                                onchange={togglechecked}
+                                aria-describedby="checkbox-feilmelding"
+                                checked={acceptedTerms}
+                            /><label class="skjemaelement__label" for="godkjennVilkaar">{label.acceptermtext}</label
+                            ><a onclick={showTerms} class="slds-var-p-left_small lenke vilkar-link"
+                                >{label.showtermstext}</a
+                            >
+                            <template if:true={showError}>
+                                <p class="typo-feilmelding">{label.ACCEPT_TERMS_ERROR}</p>
+                            </template>
+                        </div>
+                        <c-community-modal>
+                            <h1
+                                slot="modalHeader"
+                                tabindex="0"
+                                class="slds-var-m-top_x-large typo-sidetittel text-center blokk-l"
+                            >
+                                {label.SERVICE_TERMS_HEADER}
+                            </h1>
+                            <div slot="modalContent">
+                                <section>
+                                    <form class="betingelser-panel panel side-innhold">
+                                        <div class="blokk-m slds-var-m-top_medium" style="text-align: left">
+                                            <lightning-formatted-rich-text
+                                                value={label.SERVICE_TERMS}
+                                            ></lightning-formatted-rich-text>
+                                        </div>
+                                    </form>
+                                </section>
+                            </div>
+                            <div slot="modalFooter">
+                                <div class="slds-var-p-bottom_x-large svar-godta text-center blokk-m">
+                                    <button
+                                        class="knapp knapp--hoved"
+                                        aria-controls="betingelser"
+                                        onclick={termsAccepted}
+                                        type="submit"
+                                        label="Godta"
+                                    >
+                                        {label.ACCEPT_TERMS_BUTTON}
+                                    </button>
+                                </div>
+                                <div class="text-center">
+                                    <button
+                                        class="knapp knapp--flat"
+                                        type="submit"
+                                        aria-controls="betingelser"
+                                        role="button"
+                                        onclick={termsDenied}
+                                    >
+                                        {label.DENY_TERMS_BUTTON}
+                                    </button>
+                                </div>
+                            </div>
+                        </c-community-modal>
+                        <button
+                            class="sendbutton knapp knapp--hoved"
+                            type="submit"
+                            aria-disabled="false"
+                            onclick={submitrequest}
                         >
-                            {label.SERVICE_TERMS_HEADER}
-                        </h1>
-                        <div slot="modalContent">
-                            <section>
-                                <form class="betingelser-panel panel side-innhold">
-                                    <div class="blokk-m slds-var-m-top_medium" style="text-align: left">
-                                        <lightning-formatted-rich-text
-                                            value={label.SERVICE_TERMS}
-                                        ></lightning-formatted-rich-text>
+                            Send
+                        </button>
+                    </template>
+                    <template if:true={showspinner}>
+                        <div tabindex="0" class="example" role="region" aria-label="Sender melding">
+                            <div class="overflow-detector">
+                                <div class="overflow-detector__scroller">
+                                    <div class="overflow-detector__inner">
+                                        <div class="example__inner">
+                                            <svg
+                                                kind="spinner-negativ"
+                                                class="spinner spinner--m"
+                                                focusable="false"
+                                                height="32"
+                                                width="32"
+                                                viewBox="0 0 50 50"
+                                                preserveAspectRatio="xMidYMid"
+                                            >
+                                                <title>Venter...</title>
+                                                <circle
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    cx="25"
+                                                    cy="25"
+                                                    r="20"
+                                                    stroke="#eee"
+                                                    fill="none"
+                                                    stroke-width="5"
+                                                ></circle>
+                                                <circle
+                                                    cx="25"
+                                                    cy="25"
+                                                    r="20"
+                                                    stroke="#888"
+                                                    fill="none"
+                                                    stroke-width="5"
+                                                    stroke-dasharray="50 155"
+                                                    stroke-linecap="round"
+                                                ></circle>
+                                            </svg>
+                                        </div>
                                     </div>
-                                </form>
-                            </section>
-                        </div>
-                        <div slot="modalFooter">
-                            <div class="slds-var-p-bottom_x-large svar-godta text-center blokk-m">
-                                <button
-                                    class="knapp knapp--hoved"
-                                    aria-controls="betingelser"
-                                    onclick={termsAccepted}
-                                    type="submit"
-                                    label="Godta"
-                                >
-                                    {label.ACCEPT_TERMS_BUTTON}
-                                </button>
-                            </div>
-                            <div class="text-center">
-                                <button
-                                    class="knapp knapp--flat"
-                                    type="submit"
-                                    aria-controls="betingelser"
-                                    role="button"
-                                    onclick={termsDenied}
-                                >
-                                    {label.DENY_TERMS_BUTTON}
-                                </button>
+                                </div>
                             </div>
                         </div>
-                    </c-community-modal>
-                    <button class=" sendbutton knapp  knapp--hoved " type="submit" aria-disabled="false" onclick={submitrequest}>
-                        Send
-                    </button>
+                    </template>
+                </div>
             </template>
-            <template if:true={showspinner}>
-                <div class="example" role="region" aria-label="Kode-eksempel"><div class="overflow-detector"><div class="overflow-detector__scroller"><div class="overflow-detector__inner"><div class="example__inner"><svg kind="spinner-negativ" class="spinner spinner--m" aria-label="Laster innhold" focusable="false" height="32" width="32" viewBox="0 0 50 50" preserveAspectRatio="xMidYMid"><title>Venter...</title><circle xmlns="http://www.w3.org/2000/svg" cx="25" cy="25" r="20" stroke="#eee" fill="none" stroke-width="5"></circle><circle cx="25" cy="25" r="20" stroke="#888" fill="none" stroke-width="5" stroke-dasharray="50 155" stroke-linecap="round"></circle></svg></div></div></div></div></div>
-            </template>
-            </div>
-        </template>
         </div>
     </div>
 </template>
