Changes focus on submit STO community

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -102,7 +102,7 @@
                         </button>
                     </template>
                     <template if:true={showspinner}>
-                        <div tabindex="0" class="example" role="region" aria-label="Sender melding">
+                        <div tabindex="0" class="spinner" aria-label="Sender melding. Vennligst vent.">
                             <div class="overflow-detector">
                                 <div class="overflow-detector__scroller">
                                     <div class="overflow-detector__inner">
@@ -116,7 +116,7 @@
                                                 viewBox="0 0 50 50"
                                                 preserveAspectRatio="xMidYMid"
                                             >
-                                                <title>Venter...</title>
+                                                <title></title>
                                                 <circle
                                                     xmlns="http://www.w3.org/2000/svg"
                                                     cx="25"
