Minor visual changes

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -24,6 +24,7 @@
                             onchange={inputChange}
                             variant="label-hidden"
                             label="Skriv din melding her"
+                            class="typo-normal"
                             maxlength="32000"
                         ></lightning-textarea>
                         <template if:true={showErrorNoMessage}>
