Changes for better screen reader usability

--- a/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
+++ b/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
@@ -14,8 +14,8 @@
                     </div>
                 </div>
             </button>
-            <div role="region" class="dropdown">
-                <div class="expand-animation ReactCollapse--collapse" aria-hidden={showpanel}>
+            <div role="region" class={dropdownClass}>
+                <div class="expand-animation ReactCollapse--collapse" aria-hidden={inverseShowpanel}>
                     <div class="ReactCollapse--content">
                         <div class="navds-accordion__content lenkepanel__heading" padding-top="large">
                             <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
