--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -42,7 +42,7 @@
                                 aria-describedby="checkbox-feilmelding"
                                 checked={acceptedTerms}
                             /><label class="skjemaelement__label" for="godkjennVilkaar">{label.acceptermtext}</label
-                            ><a onclick={showTerms} class="slds-var-p-left_small lenke vilkar-link"
+                            ><a onclick={showTerms} class="slds-var-m-left_small lenke vilkar-link" tabindex="0"
                                 >{label.showtermstext}</a
                             >
                             <template if:true={showError}>
