Updates the vilkar text to final version

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -62,7 +62,7 @@
                                     <form class="betingelser-panel panel side-innhold">
                                         <div class="blokk-m slds-var-m-top_medium" style="text-align: left">
                                             <lightning-formatted-rich-text
-                                                value={label.SERVICE_TERMS}
+                                                value={termsContentText}
                                             ></lightning-formatted-rich-text>
                                         </div>
                                     </form>
