Updates buttons to navds V2

--- a/force-app/main/default/lwc/navButton/navButton.html
+++ b/force-app/main/default/lwc/navButton/navButton.html
@@ -1,7 +1,3 @@
 <template>
-    <div class="decorator-wrapper">
-        <a class="knapp knapp--hoved" href={url}>
-            {title}
-        </a>
-    </div>
+    <a class="navds-button navds-button--primary navds-button--medium" href={url}> {title} </a>
 </template>
