--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,6 +1,6 @@
 <template>
     <div>
-        <a class={className} href={linkUrl} key={thread.Id} id="a">
+        <a class={className} href={linkUrl} key={thread.recordId} id="a">
             <span class="typo-undertittel ">
                 <lightning-layout vertical-align="center">
                     <lightning-layout-item size="1" padding="around-medium">
